--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -270,7 +270,7 @@
     <string name="dialog_att_chooser_attributes">Attributes</string>
     <string name="dialog_att_chooser_traits">Traits</string>
     <string name="dialog_att_chooser_other">Other</string>
-    <string name="dialog_att_chooser_customize">Adjust Number</string>
+    <string name="dialog_att_chooser_customize">Customize</string>
     <string name="dialog_collect_att_chooser_title">Choose an attribute</string>
     <string name="infobars_attribute_placeholder">Select</string>
     <string name="field_name_attribute">field_name</string>
