--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -756,8 +756,9 @@
     <!-- STATISTICS -->
 
     <string name="warning_no_observations">No observations have been collected</string>
+    <string name="warning_no_data">No data to display</string>
     <string name="stats_export">Export Statistics</string>
-    <string name="stats_select_date_range">Select Date Range</string>
+    <string name="stats_toggle_view">Toggle between year and month view</string>
     <string name="stat1_title">List of Fields</string>
     <string name="stat5_title">List of People</string>
     <string name="stat8_title">List of Observations</string>
