Changed trait creator names Photo -> System in second camera choice, Usb -> USB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1054,5 +1054,7 @@
     <string name="view_trait_photo_settings_preview_title">Preview</string>
     <string name="view_trait_photo_settings_resolution_title">Target Resolution</string>
     <string name="view_trait_photo_settings_system_title">System Camera</string>
+    <string name="trait_name_alt_photo_system">System</string>
+    <string name="trait_name_alt_usb">USB</string>
 
 </resources>
