--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -767,6 +767,7 @@
     <string name="stats_heatmap_title">Heatmap</string>
     <string name="stats_heatmap">View a heatmap of the collected observations</string>
     <string name="stats_export">Long press on a card to export</string>
+    <string name="stats_loading">Loading stats...</string>
 
     <string name="stat_title_fields">Fields</string>
     <string name="stat_title_entries">Entries</string>
