include sort order

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -949,14 +949,11 @@
     <string name="brapi_study_name">Name</string>
     <string name="brapi_study_description">Description</string>
     <string name="brapi_study_location">Location</string>
-    <string name="brapi_study_sort_by">Sort By</string>
-    <string-array name="brapi_study_sort_by_options">
-        <item>studyName</item>
-        <item>studyDbId</item>
-        <item>trialName</item>
-        <item>trialDbId</item>
-        <item>locationDbId</item>
-    </string-array>
+    <string name="brapi_study_sort">Sort</string>
+    <string name="brapi_sort_study_name_asc">Study Name Ascending</string>
+    <string name="brapi_sort_study_name_desc">Study Name Descending</string>
+    <string name="brapi_sort_study_id_asc">Study ID Ascending</string>
+    <string name="brapi_sort_study_id_desc">Study ID Descending</string>
     <string name="brapi_observation_level">Observation Level</string>
     <string name="brapi_study_num_traits"> Traits</string>
     <string name="brapi_not_found">ERROR: Target system does not support this operation via BrAPI.</string>
