--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -819,6 +819,7 @@
 
     <string name="warning_no_observations">No observations have been collected</string>
     <string name="warning_no_data">No data to display</string>
+    <string name="warning_invalid_date_range">Select a valid date range</string>
     <string name="stats_heatmap_title">Heatmap</string>
     <string name="stats_heatmap">View a heatmap of the collected observations</string>
     <string name="stats_loading">Loading…</string>
