fixed bottom toolbar delete for new camera trait layouts updated camera trait ui updated camera settings dialog ui removed settings from fullscreen camera updated fullscreen camera background to black updated camera settings dialog strings improved image loading to only load thumbnails on-the-fly improved preview w/h based on screen density restricted image aspect ratios to 4:3 bugfix for canceling coroutine when navigating between plots

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1056,7 +1056,8 @@
     <string name="view_trait_photo_settings_system_title">System Camera</string>
     <string name="trait_name_alt_photo_system">System</string>
     <string name="trait_name_alt_usb">USB</string>
-    <string name="view_trait_photo_settings_camera_custom">Custom Camera</string>
-    <string name="view_trait_photo_settings_camera_system">System Camera App</string>
+    <string name="view_trait_photo_settings_camera_custom">Default</string>
+    <string name="view_trait_photo_settings_camera_system">Android</string>
+    <string name="view_trait_photo_settings_camera_choice_description">Choose between the default Field Book camera and the Android camera app.</string>
 
 </resources>
