--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -347,6 +347,11 @@
     <string name="dialog_data_grid_repeated_measures_title">Choose Observation</string>
     <string name="menu_action_header_view_data_grid_title">Update Row Headers</string>
 
+    <!--- Lock -->
+    <string name="activity_collect_locked_state">Locked - data entry, modification and deletion are disabled</string>
+    <string name="activity_collect_frozen_state">Frozen - data entry is enabled but modification and deletion are disabled</string>
+    <string name="activity_collect_unlocked_state">Unlocked - data entry, modification and deletion are enabled</string>
+
     <!-- Trait Layout: Photo -->
     <string name="trait_error_hardware_missing">Your device does not have a camera that can be used to take a photo.</string>
     <string name="trait_delete_warning_photo">Are you sure you want to delete this photo?</string>
