--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -349,8 +349,8 @@
 
     <!--- Lock -->
     <string name="activity_collect_locked_state">Locked - data entry, modification and deletion are disabled</string>
-    <string name="activity_collect_frozen_state">Frozen - data entry is enabled but modification and deletion are disabled</string>
-    <string name="activity_collect_unlocked_state">Unlocked - data entry, modification and deletion are enabled</string>
+    <string name="activity_collect_frozen_state">Frozen - once data is saved it cannot be modified or deleted</string>
+    <string name="activity_collect_unlocked_state">Unlocked - no restrictions on data entry, modification, or deletion</string>
 
     <!-- Trait Layout: Photo -->
     <string name="trait_error_hardware_missing">Your device does not have a camera that can be used to take a photo.</string>
