--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1110,5 +1110,9 @@
     <string name="tutorial_main_geonav_title">GeoNav</string>
     <string name="tutorial_main_geonav_description">This will open a configuration dialog to help with field navigation.</string>
     <string name="oauth_configured_incorrectly">Authorization request failed, please check your BrAPI settings.</string>
+    <string name="brapi_programs_activity_title">Choose your Program</string>
+    <string name="import_brapi_title">BrAPI Import</string>
+    <string name="menu_action_brapi_filter">Filter</string>
+    <string name="brapi_program_filter_title">Programs</string>
 
 </resources>
