--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="dialog_save_error_title">Save Error</string>
     <string name="dialog_back">Back</string>
     <string name="dialog_scan">Scan</string>
+    <string name="dialog_sort_by">Sort By</string>
 
     <string name="barcode_scanner_text">Scan a barcode</string>
 
@@ -67,6 +68,13 @@
 
     <!-- FIELDS -->
     <!-- General -->
+    <string name="menu_fields_sort_list">Sort Fields List</string>
+    <string name="fields_sort_by_name">Name</string>
+    <string name="fields_sort_by_import_format">Import Format</string>
+    <string name="fields_sort_by_import_date">Import Date</string>
+    <string name="fields_sort_by_edit_date">Edit Date</string>
+    <string name="fields_sort_by_sync_date">Sync Date</string>
+    <string name="fields_sort_by_export_date">Export Date</string>
     <string name="list_item_field_popup_menu_content_description">Opens a menu for the selected field.</string>
     <string name="selected_count">%1$d selected</string>
     <string name="fields_select_all">Select All</string>
@@ -74,11 +82,10 @@
     <string name="field_observation_count_format">%1$s %2$s</string>
 
     <!-- Sort -->
-    <string name="fields_sort_update">Sort</string>
+    <string name="field_sort_entries">Sort Entries</string>
     <string name="sort_dialog_saved">Sorting updated</string>
     <string name="sort_dialog_error_saving">Error updating sorting</string>
     <string name="list_item_field_sort_delete_content_description">Delete the sort attribute.</string>
-    <string name="dialog_field_sort_title">Sort Entries</string>
     <string name="list_item_field_sort_drag_content_description">Drag to move item.</string>
     <string name="dialog_field_sort_no_attributes_found">No attributes found.</string>
     <string name="dialog_field_sort_no_more_attributes_found">All attributes have been used.</string>
@@ -188,8 +195,7 @@
 
     <!-- TRAITS -->
     <!-- Sort -->
-    <string name="traits_toolbar_sort">Sort</string>
-    <string name="traits_sort_title">Sort</string>
+    <string name="traits_toolbar_sort">Sort Traits</string>
     <string name="traits_sort_name">Name</string>
     <string name="traits_sort_visibility">Visibility</string>
     <string name="traits_sort_format">Format</string>
