renamed canontrait -> canontraitlayout introduced landscape image thumbnail dimen improved delete trait listener for images moved shutter button to below preview updated camera settings to update on "ok" pressed reduced size of landscape thumbnails fixed usb settings title fixed usb settings defaulting to highest resolution fixed usb settings showing duplicated resolutions fixed usb settings preview persisting decreased image transfer size for canons

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1084,4 +1084,5 @@
     <string name="pref_canon_help_summary">This will open a URL to the FieldBook Canon manual.</string>
     <string name="pref_canon_debug_title">Debug</string>
     <string name="pref_canon_debug_summary">A preferences for developers to monitor device output.</string>
+    <string name="trait_usb_photo_settings_title">USB Photo Settings</string>
 </resources>
