fixed canon image transfer corruption, saved based on offsets of data improved image saving speed updated canon settings, preview now is toggleable ensure photo file names are sanitized so they can be used with dir.findFile removed old canon preferences added beta to canon trait display name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1085,4 +1085,5 @@
     <string name="pref_canon_debug_title">Debug</string>
     <string name="pref_canon_debug_summary">A preferences for developers to monitor device output.</string>
     <string name="trait_usb_photo_settings_title">USB Photo Settings</string>
+    <string name="canon_trait_settings_title">Canon Settings</string>
 </resources>
