--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -573,6 +573,8 @@
     <string name="preferences_source_default_import">Default import source</string>
     <string name="preferences_source_default_export">Default export source</string>
 
+    <string name="preferences_system_database_title">Database</string>
+
     <string name="pref_general_location_collection_title">Location collected</string>
     <string name="pref_general_location_collection_summary">Select a method for collecting location while using Field Book.</string>
     <string name="location_level_off">Off</string>
@@ -724,8 +726,9 @@
     <string name="preferences_general_swap_navigation">Swap navigation</string>
     <string name="preferences_general_swap_navigation_description">Swaps the behavior of the entry and trait arrows</string>
 
-    <!-- GeoNav -->
+    <!-- Location -->
     <string name="preferences_location_title">Location</string>
+    <string name="pref_geonav_category_title">GeoNav</string>
     <string name="pref_geonav_enable_title">Enable GeoNav</string>
     <string name="pref_geonav_enable_summary">Enables usage of device location to navigate fields.</string>
 
